--- a/mondini scuolasite.html
+++ b/mondini scuolasite.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <html lang="it">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS sito scuola mondini.css">
+    
   <title>IIS Viola Marchesini Rovigo - Home</title>
 
   </head>
@@ -202,7 +206,7 @@
 
          <div class="Plessi">
           <h5 id="scritte">PON FSE Studenti</h5><br>
-          <br><img src="Pon1.png" alt="Pon1" style="width: 135px; float: left;">
+          <br><img src="https://www.iisviolamarchesini.edu.it/j2/images/pon_studenti.png" alt="Pon1" style="width: 135px; float: left;">
          </div>
 
         </div>
